runs/github.com/r/rationalmatter/juno-demo-notebooks/logs/test-notebook-phone-Juno-Intro-Python-part-3.ipynb-2020-07-03T06.11.txt
[I 200703 06:15:48 inrepo:35] Testing notebook phone/Juno-Intro-Python-part-3.ipynb
[I 200703 06:15:49 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# Bad indentation!
if statement1:
    if statement2:
    print("both statement1 and statement2 are True")  # this line is not properly indented
------------------

[0;36m  File [0;32m"<ipython-input-3-78979cdecf37>"[0;36m, line [0;32m4[0m
[0;31m    print("both statement1 and statement2 are True")  # this line is not properly indented[0m
[0m        ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (<ipython-input-3-78979cdecf37>, line 4)


Container exited with status: {'Error': None, 'StatusCode': 1}
